--- a/invoice.html
+++ b/invoice.html
@@ -11,21 +11,24 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
         integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
     <link rel="stylesheet" href="style/styledoc.css">
+    <link rel="stylesheet" href="style/watermark.css">
 
     <title>Invoice | SO1234</title>
 </head>
 
 <body>
+
     <div class="kanvas">
         <div class="kanvas overvflow-auto">
             <div style="min-width: 600px">
+
                 <header>
                     <div class="row">
-                        <div class="col" id="inv">
-                            <h1 class="text-left"><span id="invoice">INVOICE</span></h1>
+                        <div class="col text-left">
+                            <img src="img/logoladang.png" alt="logo" style="width: 250px">
                         </div>
-                        <div class="col text-right">
-                            <img src="img/logoladang.png" alt="logo" style="width: 200px">
+                        <div class="col" id="inv">
+                            <h1 class="text-right"><span id="invoice">INVOICE</span></h1>
                         </div>
                     </div>
                 </header>
@@ -33,7 +36,7 @@
                     <div class="row text-right invoice-total">
                         <div class="col">
                             <div>INVOICE TOTAL:</div>
-                            <h3 class="font-weight-bold text-success"><u>Rp. 123.456.0000,-</u></h3>
+                            <h3 class="font-weight-bold text-success" id="nominal_id"><u>Rp. 123.456.0000,-</u></h3>
                         </div>
 
                     </div>
@@ -140,11 +143,12 @@
                             <div class="font-weight-bold">NOTICE:</div>
                             <div class="notice"> Harga sudah termasuk Pajak</div>
                             <div class="notice">Pilih Salah Satu Bank:</div>
-                            <div class="notice">- Bank Jatim Cab. Kalibutuh a.n PT. Ladang Karya Husada (1711000735)
+                            <div class="notice">- Bank Jatim Cab. Kalibutuh a.n PT. Ladang Karya Husada
+                                <strong>(1711000735)</strong></div>
+                            <div class="notice">- Bank Bali Dwipa Jaya a. n PT. Ladang Karya Husada
+                                <strong>(0100111007481)</strong></div>
+                            <div class="notice">- Bank Jateng a.n PT. Ladang Karya Husada <strong>(1002008889)</strong>
                             </div>
-                            <div class="notice">- Bank Bali Dwipa Jaya a. n PT. Ladang Karya Husada (0100111007481)
-                            </div>
-                            <div class="notice">- Bank Jateng a.n PT. Ladang Karya Husada (1002008889)</div>
                         </div>
                     </div>
                 </main>
@@ -154,7 +158,6 @@
             </div>
         </div>
     </div>
-
 
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
