design basp-update bast
tanda tangan Tim Pemeriksa di pindahkan ke dokumen BAPB (Berita Acara Pemeriksaan Barang)

--- a/bast.html
+++ b/bast.html
@@ -30,12 +30,15 @@
 
                 </header>
                 <main>
-                    <div class="judul" id="judul">
+                    <div class="judul text-center">
                         <h1>BERITA ACARA SERAH TERIMA</h1>
-                        <h6>No: SO1234/BAST/XII/2019</h6>
+                        <h6>No: SO1234/BAST/XII/2019-00001</h6>
                     </div>
                     <div class="mt-100">
-                        <p>Pada hari ini <b>...................................</b>, tanggal <b>...................................</b> bulan <b>...................................</b> tahun <b>......................................................................</b>, sesuai dengan: </p>
+                        <p>Pada hari ini <b>...................................</b>, tanggal
+                            <b>...................................</b> bulan <b>...................................</b>
+                            tahun <b>......................................................................</b>, sesuai
+                            dengan: </p>
                     </div>
                     <div class="nomor" id="nomortransaksi">
                         <div><span>Nomor Tagihan</span>: SO1234</div>
@@ -231,17 +234,6 @@
                                     </div>
                                 </td>
                             </tr>
-                            <tr>
-                                <td colspan="2">
-                                    <div class="col text-center">
-                                        <h6 class="font-weight-bold">TEAM PEMERIKSA</h6>
-                                        <div class="mt-18">
-                                            <u class="font-weight-bold">..................................</u>
-                                            <p>NIP. .............................</p>
-                                        </div>
-                                    </div>
-                                </td>
-                            </tr>
                         </table>
                     </div>
                 </main>
@@ -256,9 +248,12 @@
             </div>
             <div class="card-body">
                 <blockquote class="blockquote mb-0">
-                    <footer class="blockquote-footer">Harga sudah termasuk <cite title="Source Title">Pajak</cite></footer>
-                    <footer class="blockquote-footer">Bank Jatim Cab. Kalibutuh a.n PT. Ladang Karya Husada  (1711000735)</footer>
-                    <footer class="blockquote-footer">Bank Bali Dwipa Jaya a. n PT. Ladang Karya Husada (0100111007481)</footer>
+                    <footer class="blockquote-footer">Harga sudah termasuk <cite title="Source Title">Pajak</cite>
+                    </footer>
+                    <footer class="blockquote-footer">Bank Jatim Cab. Kalibutuh a.n PT. Ladang Karya Husada (1711000735)
+                    </footer>
+                    <footer class="blockquote-footer">Bank Bali Dwipa Jaya a. n PT. Ladang Karya Husada (0100111007481)
+                    </footer>
                     <footer class="blockquote-footer">Bank Jateng a.n PT. Ladang Karya Husada (1002008889)</footer>
                 </blockquote>
             </div>
