--- a/invoice.html
+++ b/invoice.html
@@ -36,7 +36,7 @@
                     <div class="row text-right invoice-total">
                         <div class="col">
                             <div>INVOICE TOTAL:</div>
-                            <h3 class="font-weight-bold text-success" id="nominal_id"><u>Rp. 123.456.0000,-</u></h3>
+                            <h3 class="font-weight-bold text-success" id="nominal_id"><u>Rp. 123.500.0000,-</u></h3>
                         </div>
 
                     </div>
@@ -50,9 +50,10 @@
                         </div>
                         <div class="col text-right">
                             <div>Invoice Number:</div>
-                            <h5 class="font-weight-bold">INV-SO1234</h5>
+                            <h5 class="font-weight-bold">INV-SO1234-00001</h5>
                             <div class="date">Date of Invoice: 01/10/2018</div> <!-- timestamp saat pesanan dibuat -->
                             <div class="date">Due Date: 30/10/2018</div>
+                            <div>Bank payment: <strong>Bank Jatim</strong></div>
                         </div>
                     </div>
 
@@ -128,13 +129,18 @@
 
                                 <tr>
                                     <td colspan="2"></td>
+                                    <td colspan="2" class="text-right font-weight-bold">Sub Total</td>
+                                    <td class="font-weight-bold text-right"> Rp. 123.456.000,-</td>
+                                </tr>
+                                <tr class="noborder">
+                                    <td colspan="2"></td>
                                     <td colspan="2" class="text-right font-weight-bold">Ongkos Kirim</td>
                                     <td class="font-weight-bold text-right"> Rp. 19.000</td>
                                 </tr>
                                 <tr class="noborder">
                                     <td colspan="2"></td>
                                     <td colspan="2" class="text-right font-weight-bold">Total</td>
-                                    <td class="font-weight-bold text-right">Rp.123.456.000</td>
+                                    <td class="font-weight-bold text-right">Rp.123.500.000,-</td>
                                 </tr>
                             </tfoot>
                         </table>
