--- a/kwitansi.html
+++ b/kwitansi.html
@@ -31,7 +31,7 @@
                 <main>
                     <div>
                         <h1 class="font-weight-bold" id="kwitansi"><u>KWITANSI</u></h1>
-                        <p>NO: SO1234/TL/K/XII/2019</p>
+                        <p>NO: SO1234/TL/K/XII/2019-00001</p>
                     </div>
 
                     <div class="table-kwitansi">
@@ -73,7 +73,7 @@
                                     <tr>
                                         <td class="text-center" id="terbilang">Terbilang</td>
                                         <td class="text-center">
-                                            <h4>Rp. 123.456.000,-</h4>
+                                            <h4 class="font-weight-bold">Rp. 123.456.000,-</h4>
                                         </td>
                                     </tr>
                                 </tbody>
