--- a/bapb.html
+++ b/bapb.html
@@ -47,7 +47,6 @@
                         <div><span>Alamat</span>: Jl. sada, asdas no 9 </div>
                         <p>Adapun rincian barang sebagai berikut :</p>
                     </div>
-
                     <div class="table-responsive mt-100">
                         <table class="table table-hover table-striped table-sm table-bordered">
                             <thead id="headertable" class="bg-primary font-weight-bold text-align-center">
@@ -74,7 +73,6 @@
                                     <td>Samsung 9</td>
                                     <td>132</td>
                                     <td></td>
-
                                 </tr>
                                 <tr>
                                     <td scope="row">4</td>
@@ -202,3 +200,9 @@
 </body>
 
 </html>
+
+
+BPAK WAWAN PALEMBANG
+7 SD
+
+AFIRMASI & KINERJA 
