update border table

--- a/bast.html
+++ b/bast.html
@@ -34,7 +34,7 @@
                         <h1>BERITA ACARA SERAH TERIMA</h1>
                         <h6>No: SO1234/BAST/XII/2019-00001</h6>
                     </div>
-                    <div class="mt-100">
+                    <div class="mt-100 text-justify">
                         <p>Pada hari ini <b>...................................</b>, tanggal
                             <b>...................................</b> bulan <b>...................................</b>
                             tahun <b>......................................................................</b>, sesuai
@@ -121,7 +121,7 @@
                             </p>
                         </div>
                         <div class="table-responsive">
-                            <table class="table table-hover table-striped table-sm" border="1">
+                            <table class="table table-hover table-striped table-sm">
                                 <thead id="headertable" class="bg-primary font-weight-bold text-align-center">
                                     <th>Number</th>
                                     <th>Description</th>
@@ -211,7 +211,7 @@
                             sebagaimana seharusnya.</p>
                     </div>
                     <div class="tandatangan">
-                        <table class="table">
+                        <table class="table table-sm">
                             <tr>
                                 <td>
                                     <div class="col text-center">
@@ -240,14 +240,13 @@
             </div>
         </div>
     </div>
-
     <footer>
         <div class="card">
             <div class="card-header">
                 Note:
             </div>
             <div class="card-body">
-                <blockquote class="blockquote mb-0">
+                <blockquote class="blockquote">
                     <footer class="blockquote-footer">Harga sudah termasuk <cite title="Source Title">Pajak</cite>
                     </footer>
                     <footer class="blockquote-footer">Bank Jatim Cab. Kalibutuh a.n PT. Ladang Karya Husada (1711000735)
@@ -274,6 +273,3 @@
 
 
 </html>
-
-
-qoltech
