--- a/invoice.html
+++ b/invoice.html
@@ -58,33 +58,33 @@
                     </div>
 
                     <div class="table-responsive">
-                        <table class="table table-hover table-striped table-sm">
-                            <thead id="headertable" class="bg-primary font-weight-bold text-align-center">
+                        <table class="table table-hover table-striped table-sm table-barang">
+                            <thead class="font-weight-bold text-align-center">
                                 <th>Number</th>
                                 <th>Description</th>
-                                <th>Quantity</th>
-                                <th>Unit Price</th>
-                                <th>Sub Total Price</th>
+                                <th class="text-right">Quantity</th>
+                                <th class="text-right">Unit Price</th>
+                                <th class="text-right">Sub Total Price</th>
                             </thead>
                             <tbody>
                                 <tr>
                                     <td scope="row">1</td>
                                     <td>Samsung 91111111111111111111111111111111111111</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">2</td>
                                     <td>Samsung 1</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">3</td>
                                     <td>Samsung 9</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
 
@@ -92,35 +92,35 @@
                                 <tr>
                                     <td scope="row">4</td>
                                     <td>Samsung 1</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">3</td>
                                     <td>Samsung 9</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">4</td>
                                     <td>Samsung 1</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">3</td>
                                     <td>Samsung 9</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
                                 <tr>
                                     <td scope="row">4</td>
                                     <td>Samsung 1</td>
-                                    <td>132</td>
+                                    <td class="text-right">132</td>
                                     <td class="text-right">1.999.000</td>
                                     <td class="text-right">26.268.000</td>
                                 </tr>
