--- a/bapb.html
+++ b/bapb.html
@@ -48,7 +48,7 @@
                         <p>Adapun rincian barang sebagai berikut :</p>
                     </div>
                     <div class="table-responsive mt-100">
-                        <table class="table table-hover table-striped table-sm table-bordered">
+                        <table class="table table-hover table-striped table-sm">
                             <thead id="headertable" class="bg-primary font-weight-bold text-align-center">
                                 <th>Number</th>
                                 <th>Description</th>
@@ -200,9 +200,3 @@
 </body>
 
 </html>
-
-
-BPAK WAWAN PALEMBANG
-7 SD
-
-AFIRMASI & KINERJA 
