--- a/bast.html
+++ b/bast.html
@@ -196,8 +196,23 @@
                                         <td></td>
                                     </tr>
                                     <tr>
-                                        <td colspan="4" class="text-center font-weight-bold">Total</td>
+                                        <td colspan="4" class="text-center font-weight-bold">Sub Total</td>
                                         <td class="font-weight-bold text-right">Rp.123.456.000</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4" class="text-center ">Pajak</td>
+                                        <td class=" text-right">Rp.12.345.600</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4" class="text-center ">Ongkir</td>
+                                        <td class="text-right">Rp.19.000</td>
+                                        <td></td>
+                                    </tr>
+                                    <tr>
+                                        <td colspan="4" class="text-center font-weight-bold">Total</td>
+                                        <td class="font-weight-bold text-right">Rp. 135.820.600,-</td>
                                         <td></td>
                                     </tr>
                                 </tbody>
