--- a/kwitansi.html
+++ b/kwitansi.html
@@ -36,36 +36,38 @@
 
                     <div class="table-kwitansi">
                         <table class="table table-sm">
-                            <tr>
-                                <td>Sudah Diterima Dari</td>
-                                <td>:</td>
-                                <td class="font-weight-bold">SMPN 1 SUBUH</td>
-                            </tr>
-                            <tr>
-                                <td>Uang Sejumlah</td>
-                                <td>:</td>
-                                <td class="font-weight-bold">Rp. 123.456.000,-</td>
-                            </tr>
-                            <tr>
-                                <td>Dari Total Tagihan</td>
-                                <td>:</td>
-                                <td class="font-weight-bold">Rp. 123.456.000,-</td>
-                            </tr>
-                            <tr>
-                                <td>Sisa Tagihan</td>
-                                <td>:</td>
-                                <td class="font-weight-bold">Rp. 0,-</td>
-                            </tr>
-                            <tr>
-                                <td>Untuk Pembayaran</td>
-                                <td>:</td>
-                                <td>
-                                    <p>Pembayaran Barang/ Jasa yang dipesan melalui
-                                        SIPLah Toko Ladang (siplah.tokoladang.co.id) dengan nomor pesanan
-                                        <strong>SO1234</strong>
-                                    </p>
-                                </td>
-                            </tr>
+                            <tbody>
+                                <tr>
+                                    <td>Sudah Diterima Dari</td>
+                                    <td>:</td>
+                                    <td class="font-weight-bold">SMPN 1 SUBUH</td>
+                                </tr>
+                                <tr>
+                                    <td>Uang Sejumlah</td>
+                                    <td>:</td>
+                                    <td class="font-weight-bold">Rp. 123.456.000,-</td>
+                                </tr>
+                                <tr>
+                                    <td>Dari Total Tagihan</td>
+                                    <td>:</td>
+                                    <td class="font-weight-bold">Rp. 123.456.000,-</td>
+                                </tr>
+                                <tr>
+                                    <td>Sisa Tagihan</td>
+                                    <td>:</td>
+                                    <td class="font-weight-bold">Rp. 0,-</td>
+                                </tr>
+                                <tr>
+                                    <td>Untuk Pembayaran</td>
+                                    <td>:</td>
+                                    <td>
+                                        <p>Pembayaran Barang/ Jasa yang dipesan melalui
+                                            SIPLah Toko Ladang (siplah.tokoladang.co.id) dengan nomor pesanan
+                                            <strong>SO1234</strong>
+                                        </p>
+                                    </td>
+                                </tr>
+                            </tbody>
                         </table>
                         <div class="terbilang mt-100">
                             <table>
